# sqlite-mcp

./: LICENSE  README.md  main.py  pyproject.toml
src/: main.py
src/utils/: __init__.py  config.py  database.py  logging.py  query_utils.py  utils.py
utils/: __init__.py  config.py  database.py  exploration.py  logging.py  models.py  query_utils.py  sqllite_service.py  utils.py
