[project]
name = "sqllite-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["uv"]

[project.scripts]
sqllite-mcp = "main:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "B", "I", "D", "Q"]
ignore = ["E501", "D100", "D104", "D107"]
exclude = ["node_modules", ".venv", "venv", "__pypackages__"]