[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqllite-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.4",
    "mcp>=1.16.0",
    "pydantic>=2.11.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
sqlite-mcp = "src.main:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "B", "I", "D", "Q"]
ignore = ["E501", "D100", "D104", "D107"]
exclude = ["node_modules", ".venv", "venv", "__pypackages__"]

[tool.isort]
profile="ruff"
sections=["standard library", "third party", "first party"]
known-first-party=["main", "utils"]